# me

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.env.template  docker-compose.yml  entrypoint.sh  git-credential-clayde.sh  justfile  pyproject.toml  refactor-issues.md
.github/workflows/: build.yml
src/clayde/: claude.py  cli.py  config.py  git.py  github.py  implementer.py  orchestrator.py  planner.py  prompts.py  responses.py  safety.py  state.py  telemetry.py
src/clayde/prompts/: address_review.j2  implement.j2  plan.j2  preliminary_plan.j2  thorough_plan.j2  update_plan.j2
src/clayde/tasks/: implement.py  plan.py  review.py
tests/: test_claude.py  test_config.py  test_git.py  test_github.py  test_orchestrator.py  test_responses.py  test_safety.py  test_state.py  test_tasks_implement.py  test_tasks_plan.py  test_tasks_review.py  test_telemetry.py
