[project]
name = "clayde"
version = "0.1.0"
description = "Clayde — autonomous GitHub issue agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "pydantic-settings>=2.0",
    "PyGitHub>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
clayde = "clayde.orchestrator:run_loop"
clayde-once = "clayde.orchestrator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
